--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@ document.write(password());
 <body>
 <!-- 此处填写显示信息 -->
 <div class="markdown-html"><script>$.get(searchMap.md, function(text) { document.write(markdownit().render(text)); });</script></div>
-<script language='javascript'>document.location = 'http://https://91en.github.io/91en/markdown.html?md=readme.md'</script>
+<script language='javascript'>document.location = 'http://https://91en.github.io/91en/markdown.html?md=https://github.com/91en/91en/blob/master/README.md'</script>
 </body>
 </html>
