--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ document.write(password());
 </head>
 <body>
 <!-- 此处填写显示信息 -->
-<script language='javascript'>document.location = 'https://91en.github.io/91en/markdown.html?md=https://github.com/91en/91en/blob/master/README.md'</script>
+<script language='javascript'>document.location = 'https://91en.github.io/91en/markdown.html?md=README.md'</script>
 </body>
 </html>
