--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>加密</title> 
+<title>请输入密码</title> 
 <script language = JavaScript>
 function password() {
 	var testV = 1;
