--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
-    <title>恭喜你找到密码</title>
+    <title>纯收集、备用、防失联</title>
     <link rel="stylesheet" href="./assets/css/xenon-core.css">
     <script src="./assets/js/jquery-.min.js"></script> 	
 </head>
